--- a/eva/package.json
+++ b/eva/package.json
@@ -2,14 +2,12 @@
   "name": "eva",
   "version": "1.0.0",
   "description": "első express alkalmazás",
-  "main": "index.js",
+  "main": "backend_server.js",
+  "type": "module" ,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^5.1.0"
-  }
+  "license": "ISC"
 }
