--- a/11-13/routes/package.json
+++ b/11-13/routes/package.json
@@ -1,12 +1,16 @@
 {
   "name": "routes",
   "version": "1.0.0",
-  "description": "",
+  "description": "adatok fogadása és küldése route-ok segítségével különböző utvonalakon",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "type": "module",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^5.1.0"
+  }
 }
