--- a/11-14/mysql/package.json
+++ b/11-14/mysql/package.json
@@ -1,19 +1,23 @@
 {
-  "name": "naptar",
+  "name": "mysql",
   "version": "1.0.0",
-  "description": "naptar ",
+  "description": "mysql2 pool example",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "mysql2",
+    "pool",
+    "example",
+    "exception handling"
+  ],
   "author": "",
   "license": "ISC",
   "type": "module",
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "fs": "^0.0.1-security",
-    "path": "^0.12.7"
+    "mysql2": "^3.15.3"
   }
 }
