--- a/11-21/Pizza_adatbazis/package.json
+++ b/11-21/Pizza_adatbazis/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "mysql2": "^3.15.3"
   },
@@ -7,7 +8,6 @@
   "version": "1.0.0",
   "description": "pizza adatbazis backend ",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
